style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
a {
  text-decoration: none;
  color: white;
}
a:hover {
  color: #f6efbd;
}
/* Navbar section */
.nav-item {
  margin-left: 80px;
}

#navbar {
  background-color: #3d0301;
  padding: 40px 70px;
}

.navbar-brand,
.navbar-nav .nav-link {
  color: whitesmoke;
  font-weight: 600;
  text-transform: uppercase;
}

.navbar-brand:hover,
.navbar-nav .nav-link:hover {
  color: #f6efbd;
}

.navbar-nav .nav-link:active,
.navbar-nav .nav-link.active {
  color: #bc7c7c;
}

.navbar-brand img {
  filter: brightness(0) invert(1);
}

ul li {
  position: relative;
}

li::after {
  content: "";
  position: absolute;
  height: 2px;
  width: 0px;
  background-color: #f6efbd;
  bottom: 0;
  left: 5px;
}

li:hover::after {
  width: 90%;
  transition: 800ms;
}
.navbar-toggler-icon {
  filter: brightness(0) invert(1);
}
.navbar-toggler {
  color: whitesmoke;
}

/* Hero section */
#hero {
  width: 100%;
  background-color: #5a0719;
  color: whitesmoke;
}

.hero-img {
  padding: 50px 70px 30px 70px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.stylish-img {
  filter: grayscale(0.7);
  border: 3px solid #bc7c7c;
  border-radius: 20px;
}

.stylish-img:hover {
  filter: grayscale(0);
  transform: scale(1.2);
  transition: 1000ms;
}

.hero-text h1 {
  font-size: 100px;
  padding-bottom: 20px;
}

.hero-text address {
  font-size: 30px;
}

.hero-text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: end;
  padding: 20px 70px;
  text-align: right;
}

.main-short-info {
  width: 78%;
  display: flex;
  justify-content: space-between;
}

.short-info {
  padding: 5px 10px;
}

.short-info h2 {
  font-size: 40px;
  font-style: italic;
}

.register-btn {
  color: #3d0301;
  background-color: whitesmoke;
  padding: 10px 30px;
  width: 180px;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 20px;
  border: none;
  border-radius: 30px;
  margin-top: 40px;
}
.register-btn:hover {
  background-color: #f6efbd;
  color: #5a0719;
}

.contact-icons {
  display: flex;
  justify-content: space-around;
  width: 250px;
}

.contact-icons .icons {
  border: 2px solid whitesmoke;
  padding: 5px 10px;
  border-radius: 50%;
}

.contact-icons .icons:hover {
  border: 2px solid #f6efbd;
}

.short-contact {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.short-contact p {
  margin: 0;
}

/* About section */
#about,
#hero,
#testimonials {
  height: 600px;
}

.about-text,
.about-img {
  padding: 50px 70px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.about-text h2 {
  color: #5a0719;
  text-transform: uppercase;
  align-self: self-start;
  margin-bottom: 10px;
}
/* Testimonials section */
#testimonials {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url(./assets/images/thao-lee-yYSY93clr4w-unsplash.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-color: rgba(0, 0, 0, 0.658);
  background-blend-mode: overlay;
}

#testimonials h2 {
  color: #5a0719;
  text-transform: uppercase;
  margin: 50px 0px;
  padding: 5px 10px;
  background-color: rgba(245, 245, 245, 0.404);
}

#testimonials img {
  width: 550px;
}
.hr-style {
  width: 6%;
  position: relative;
  left: 47%;
  height: 2px;
  background-color: #5a0719;
  opacity: 0.8;
  margin: 50px 0px;
}

#carouselExampleIndicators {
  width: 80%;
}
.testimonial-card .card-up {
  height: 120px;
  overflow: hidden;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}
.testimonial-card .avatar {
  width: 110px;
  margin-top: -60px;
  overflow: hidden;
  border: 3px solid #fff;
  border-radius: 50%;
}

/* Services section */
#services {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#services h2 {
  color: #5a0719;
  text-transform: uppercase;
  margin: 50px 0px;
  padding: 5px 10px;
}

#services .nav-item {
  margin-left: 0;
  margin: 10px;
}

#services ul li {
  position: relative;
}

#services li::after {
  content: "";
  position: absolute;
  height: 2px;
  width: 0px;
  background-color: #3d0301;
  bottom: 0;
  left: 5px;
}

#services li:hover::after {
  width: 90%;
  transition: 800ms;
}

.service-tab {
  color: #3d0301;
  background-color: whitesmoke;
  /* padding: 10px 30px; */
  width: 150px;
  text-transform: uppercase;
  font-weight: 500;
  /* font-size: 20px; */
  border: 2px solid #bc7c7c;
  border-radius: 30px;
}

.service-tab:hover {
  background-color: #f6efbd;
  color: #5a0719;
}

.service-tab:active,
.service-tab.active {
  background-color: #5a0719 !important;
  color: whitesmoke !important;
}

/* Pricing tabs */
#services .tab-content {
  width: 80%;
}

#services .card {
  border: 2px solid #08080867 !important;
  color: black;
}

#services .card-header {
  background-color: #075a2a;
  color: whitesmoke;
}

#services .card-body ul li::after {
  height: 1px;
  background-color: #075a2a;
}

/* Contact section  */
#contact {
  height: 600px;
  background-image: url(./assets/images/soon-santos-Th0kRmcOyiY-unsplash.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-color: rgba(0, 0, 0, 0.658);
  background-blend-mode: overlay;
}

#contact.container-fluid {
  margin: 0;
}

.contact-text,
.contact-img {
  padding: 50px 70px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: whitesmoke;
}

/* Footer section */
footer {
  width: 100%;
  height: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: black;
  color: #bc7c7c;
}

/* To the Top */
.to-top {
  background-color: rgba(171, 218, 224, 0.486);
  height: 50px;
  width: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 20px;
  right: 20px;
}
.to-top svg {
  fill: #4e4b4b85;
  height: 40px;
  width: 40px;
}

/* -------------------------------------RESPONSIVE DESIGN---------------------------- */
@media (max-width: 1100px) {
  #about,
  #hero,
  #testimonials,
  #contact {
    height: auto;
  }
  #hero div {
    flex-direction: column;
    width: 100%;
    text-align: center;
    justify-content: center;
    align-items: center;
  }
  .main-short-info,
  .short-contact,
  .contact-icons {
    flex-direction: row !important;
  }
  .contact-icons {
    width: 160px !important;
  }
  .short-contact {
    justify-content: space-between !important;
  }
  .about-text {
    text-align: justify;
  }
}

@media (max-width: 540px) {
  #navbar .container-fluid {
    width: 80% !important;
  }
  #hero h1 {
    font-size: 50px;
  }

  .stylish-img {
    width: 90% !important;
  }
  .main-short-info {
    flex-direction: column !important;
    border: 5px solid #bc7c7c;
  }
  .short-contact {
    flex-direction: column !important;
  }

  .short-contact p {
    margin: 10px;
  }

  .about-text h2 {
    align-self: center;
  }
  #services .tab-content {
    width: 60%;
  }
  .hero-img,
  .hero-text,
  .about-img,
  .about-text {
    padding: 50px 20px;
  }
}

